# CGoGN

./: CMakeLists.txt
Apps/Benches/: CMakeLists.txt
Apps/Examples/: CMakeLists.txt
Apps/SandBox/: CMakeLists.txt
Apps/Tests/: CMakeLists.txt
Apps/Tests/Algo/Import/: CMakeLists.txt
Apps/Tests/Utils/: CMakeLists.txt
Apps/Tuto/: CMakeLists.txt
CGoGN/: CMakeLists.txt
SCHNApps/: CMakeLists.txt
SCHNApps/Plugins/: plugins_cmake.txt
SCHNApps/Plugins/schnapps/: CMakeLists.txt
cmake_modules/: Qt_5x.cmake
